fixed horizontal scroll on mobile

--- a/src/Sass/ui/modules/_hero-basic.scss
+++ b/src/Sass/ui/modules/_hero-basic.scss
@@ -1,67 +1,61 @@
 .hero-basic {
+  // border-left: 8px dotted var(--bg-dark-gray);
+  padding: 40px 40px;
+  margin: 64px 23px 0 23px;
+  position: relative;
+  max-width: $container;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  background-image: linear-gradient(
+    to bottom,
+    var(--bg-dark-gray) 20%,
+    transparent 20%
+  );
+  background-position: left center;
+  background-size: 4px 24px;
+  background-repeat: repeat-y;
   @media (max-width: $screen-md-max) {
     padding-top: 80px;
-    margin: 0;
+    transform: translate(0, 0);
+    left:0;
+    padding:32px 0 0 32px;
+    margin: 140px 24px 0 40px;
   }
-  .grouper {
-    // border-left: 8px dotted var(--bg-dark-gray);
-    padding: 40px 40px;
-    margin: 64px 23px 0 23px;
-    position: relative;
-    max-width: $container;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    background-image: linear-gradient(
-      to bottom,
-      var(--bg-dark-gray) 20%,
-      transparent 20%
-    );
-    background-position: left center;
-    background-size: 4px 24px;
-    background-repeat: repeat-y;
+  .project-header {
+    padding-top: 2em;
+  }
+  .dot-group {
+    height: auto;
+    width: auto;
+    position: absolute;
+    left: -18px;
+    top: 104px;
+    display: flex;
     @media (max-width: $screen-md-max) {
-      padding-top: 80px;
-      transform: translate(0, 0);
-      left: 0;
-      padding: 32px 0 0 32px;
-      margin: 0px 24px 0 40px;
+      left: -20px;
+      top:80px;
     }
-    .project-header {
-      padding-top: 2em;
+    .dot {
+      background-color: orangered;
+      border-radius: 50%;
     }
-    .dot-group {
-      height: auto;
-      width: auto;
-      position: absolute;
-      left: -18px;
-      top: 104px;
-      display: flex;
-      @media (max-width: $screen-md-max) {
-        left: -20px;
-        top: 180px;
-      }
-      .dot {
-        background-color: orangered;
-        border-radius: 50%;
-      }
-      .dot-large {
-        height: 14px;
-        width: 14px;
-      }
-      .dot-medium {
-        height: 10px;
-        width: 10px;
-        opacity: 50%;
-        margin-top: 32px;
-        margin-left: -3px;
-      }
-      .dot-small {
-        height: 8px;
-        width: 8px;
-        opacity: 20%;
-        margin-top: 20px;
-        margin-left: 6px;
-      }
+    .dot-large {
+      height: 14px;
+      width: 14px;
+    }
+    .dot-medium {
+      height: 10px;
+      width: 10px;
+      opacity: 50%;
+      margin-top: 32px;
+      margin-left: -3px;
+    }
+    .dot-small {
+      height: 8px;
+      width: 8px;
+      opacity: 20%;
+      margin-top: 20px;
+      margin-left: 6px;
     }
   }
 }
